--- a/views/index.html
+++ b/views/index.html
@@ -45,7 +45,7 @@
         <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav">
             <li class="nav-item active">
-              <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+              <a class="nav-link" href="/index">Home</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="/login">Login</a>
@@ -58,7 +58,24 @@
             </li>
           </ul>
         </div>
-      </nav>
+    </nav>
+
+    <div class="title">
+      <h1>Repair Ticket List</h1>
+    </div>
+    <div class="container">
+      <table class="table table-dark table-striped">
+        <thead>
+          <tr>
+            <th>Name</th>
+            <th>Phone #</th>
+            <th>Problem</th>
+            <th>Actions</th>
+          </tr>
+        </thead>
+
+      </table>
+    </div>
 
     <form method="POST" action="/addpost2">
         <input type="text" id="title" name="title"/>
