--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -1,31 +1,360 @@
-nav nav-item {
-    background-color: black;
-    padding: 30px 60px;
-    display: flex;
-    justify-content: space-between;
-}
 
-nav #navbarNav .navbar-nav {
-    display: flex;
-    justify-content: space-around;
-    align-items: center;
-}
 
-nav li {
-    list-style: none;
-}
 
-nav li a {
-    list-style: none;
-    text-decoration: none;
-}
+/* Navagation Style */
 
 .title{
     text-align: center;
     margin-top: 25px;
 }
 
+nav {
+  display: flex;
+  padding: 20px;
+  justify-content: space-between;
+}
+nav .logo{
+  font-size: 1.5rem;
+  font-weight: 700;
+  text-transform: uppercase;
+  color: white;
+  display: flex;
+}
+nav div.logo a.name{
+  background:#144bca;
+  padding: 15px 20px;
+  text-decoration: none;
+  color: white;
+}
+nav div.nav-menu{
+  font-size: 1rem;
+  text-transform: uppercase;
+  text-decoration: none;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+nav div.nav-menu a{
+  font-size: 1rem;
+  text-transform: uppercase;
+  text-decoration: none;
+  color: black;
+  padding: 0 10px;
+  /* transition: all .3s ease-in-out; */
+}
+nav div.nav-menu a:hover{
+  font-weight: 700;
+  color:#144bca;
+}
+nav div.menu-btn{
+  font-weight: 700;
+  color:#144bca;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 15px;
+  font-size: 1.6rem;
+  display: none;
+  cursor: pointer;
+}
+body div.mobile-menu{
+  display:none;
+  background: #fff;
+  flex-direction: column;
+  padding: 40px 0;
+  position: absolute;
+  top: 0;
+  height: 100vh;
+  width: 50%;
+  z-index: 10;
+  transform: translate3d(-100%, 0, 0);
+  transition: all .4s ease-in-out;
+  -webkit-box-shadow: 2px 0px 78px -15px rgba(0,0,0,0.75);
+  -moz-box-shadow: 2px 0px 78px -15px rgba(0,0,0,0.75);
+  box-shadow: 2px 0px 78px -15px rgba(0,0,0,0.75);
+}
+div.mobile-menu.active{
+  transform: translate3d(0, 0, 0);
+}
+div.mobile-menu a{
+  padding: 15px;
+  text-decoration: none;
+  color: black;
+
+}
+div.mobile-menu a:hover{
+
+  text-decoration: none;
+  color: white;
+  background: #144bca;
+}
+@media only screen and (max-width: 960px){
+  .container{ width: 100%}
+}
+/* Phones */
+@media only screen and (max-width: 767px){
+  nav div.nav-menu{
+    display: none;
+  }
+  nav div.menu-btn{
+    display: flex;
+
+  }
+  nav div.logo{
+    font-size: 1.3rem;
+  }
+  div.mobile-menu{
+    display: flex;
+  }
+}
+
+/* Table  Style */
+
+.styled-table {
+    border-collapse: collapse;
+    margin: 25px 0;
+    font-size: 0.9em;
+    font-family: sans-serif;
+    width: 100%;
+    box-shadow: 0 0 20px rgba(0, 0, 0, 0.15);
+}
+
+.styled-table thead tr {
+    background-color: #144bca;
+    color: #ffffff;
+    text-align: left;
+}
+
+.styled-table th,
+.styled-table td {
+    padding: 12px 15px;
+}
+
+.styled-table tbody tr {
+    border-bottom: 1px solid #dddddd;
+}
+
+.styled-table tbody tr:nth-of-type(even) {
+    background-color: #f3f3f3;
+}
+
+.styled-table tbody tr:nth-of-type(odd) {
+    background-color: #f3f3f3;
+}
+
+.styled-table tbody tr:last-of-type {
+    border-bottom: 2px solid#144bca;
+}
+ 
+
+
+
+/* Form Style */
+.form-container {
+    margin-top: 200px;
+} 
+
 form-group {
     text-align: center;
     margin-top: 25px;
+}
+
+.img{
+	display: flex;
+	justify-content: flex-end;
+	align-items: center;
+}
+
+.login-content{
+
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	text-align: center;
+}
+
+.img2{
+	height: 500px;
+}
+.img1 {
+	height: 48px;
+  margin-right: 180px;
+}
+
+form{
+    width: 360px;
+}
+
+.login-content img{
+    height: 250px;
+    margin-top: 25px;
+}
+
+.login-content h2{
+	margin: 15px 0;
+	color: #333;
+	text-transform: uppercase;
+	font-size: 2.9rem;
+}
+
+.login-content .input-div{
+	position: relative;
+    display: grid;
+    grid-template-columns: 7% 93%;
+    margin: 25px 0;
+    padding: 5px 0;
+    border-bottom: 2px solid #d9d9d9;
+}
+
+.login-content .input-div.one{
+	margin-top: 0;
+}
+
+.i{
+	color: #d9d9d9;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+}
+
+.i {
+	transition: .3s;
+}
+
+.input-div > div{
+    position: relative;
+	height: 45px;
+}
+
+.input-div > div > h5{
+	position: absolute;
+	left: 10px;
+	top: 50%;
+	transform: translateY(-50%);
+	color: #999;
+	font-size: 18px;
+	transition: .3s;
+}
+
+.input-div:before, .input-div:after{
+	content: '';
+	position: absolute;
+	bottom: -2px;
+	width: 0%;
+	height: 2px;
+	background-color: #38d39f;
+	transition: .4s;
+}
+
+.input-div:before{
+	right: 50%;
+}
+
+.input-div:after{
+	left: 50%;
+}
+
+.input-div.focus:before, .input-div.focus:after{
+	width: 50%;
+}
+
+.input-div.focus > div > h5{
+	top: -5px;
+	font-size: 15px;
+}
+
+.input-div.focus > .i > i{
+	color: #144bca;
+}
+
+.input-div > div > input{
+	position: absolute;
+	left: 0;
+	top: 0;
+	width: 100%;
+	height: 100%;
+	border: none;
+	outline: none;
+	background: none;
+	padding: 0.5rem 0.7rem;
+	font-size: 1.2rem;
+	color: #555;
+	font-family: 'poppins', sans-serif;
+}
+
+.input-div.pass{
+	margin-bottom: 4px;
+}
+
+a{
+	display: block;
+	text-align: right;
+	text-decoration: none;
+	color: #999;
+	font-size: 0.9rem;
+	transition: .3s;
+}
+
+a:hover{
+	color:#144bca;
+}
+
+.button{
+	display: block;
+	width: 100%;
+	height: 50px;
+	border-radius: 25px;
+	outline: none;
+	border: none;
+	background-image: linear-gradient(to right, #144bca, #144bca, #144bca);
+	background-size: 200%;
+	font-size: 1.2rem;
+	color: #fff;
+	font-family: 'Poppins', sans-serif;
+	text-transform: uppercase;
+	margin: 1rem 0;
+	cursor: pointer;
+	transition: .5s;
+}
+.button:hover{
+	background-position: right;
+}
+
+
+@media screen and (max-width: 1050px){
+	.container{
+		grid-gap: 5rem;
+	}
+}
+
+@media screen and (max-width: 1000px){
+	form{
+		width: 290px;
+	}
+
+	.login-content h2{
+        font-size: 2.4rem;
+        margin: 8px 0;
+	}
+
+	.img imgdiv {
+		width: 400px;
+	}
+}
+
+@media screen and (max-width: 900px){
+	.container{
+		grid-template-columns: 1fr;
+	}
+
+	.img{
+		display: none;
+  }
+  img{
+		display: none;
+	}
+
+	.login-content{
+		justify-content: center;
+	}
 }
