update the update route with edit functonality

--- a/views/editForm.ejs
+++ b/views/editForm.ejs
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Cyber Bar's Cellphone Repair Ticketing System</title>
+    <title>Cyber Bar's Cellphone Repair Ticketing Software</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
     <link href="https://fonts.googleapis.com/css?family=Poppins:600&display=swap" rel="stylesheet">
     <script src="https://kit.fontawesome.com/120ca474ce.js" crossorigin="anonymous"></script>
@@ -37,16 +37,6 @@
         //     continue;
         // }
     </script>
-    
-    <!-- <button onclick="createTable()">Create Table</button> -->
-    <!-- <nav>
-        <h4>Cyber Bar Cellphone Repair Ticket System</h4>
-        <ul>
-            <li><a href="/login">Login</a></li>
-            <li><button onclick="logout()">Logout</button></li>
-            <li><a href="/register">Register</a></li>
-        </ul>
-    </nav> -->
   
   <nav class="container">
       <div class="logo">
@@ -68,60 +58,31 @@
       <a href="/register">Register</a>
   </div>
 
-    <div class="title">
-      <h1><%= title %></h1>
-    </div>
-    <div class="container">
-      <table class="styled-table">
-        <thead>
-          <tr>
-            <th>Name</th>
-            <th>Phone #</th>
-            <th>Phone Type</th>
-            <th>Problem</th>
-            <th>Actions</th>
-          </tr>
-        </thead>
-        
-        <tbody>
-          <% tickets.forEach(function(ticket){ %>
-              <tr>
-                  <td><%= ticket.name %></td>
-                  <td><%= ticket.phone_number %></td>
-                  <td><%= ticket.cellphone %></td>
-                  <td><%= ticket.problem %></td>
-                  <td>
-                    <a href="/edit/<%= ticket.id %>" class="btn btn-sm btn-primary">Edit</a>
-                    <a href="delete/<%= ticket.id %>" class="btn btn-sm btn-danger">Delete</a>
-                  </td>
-              </tr>
-          <% }); %>
-      </tbody>
-        
-      </table>
-    </div>
-
     <div class="container">
       <div class="form-container">
-        <form action="/addticket" method="POST">
+        <h2>Update</h2>
+        <% tickets.forEach(function(ticket){ %>
+        <form action="/update" method="POST">
+            <input type="hidden" value="<%= ticket.id %>" name="id">
           <div class="form-group">
             <label for="name">Name:</label>
-            <input type="text" class="form-control" id="name" placeholder="Enter Name" name="name" required>
+            <input type="text" class="form-control" id="name" placeholder="Enter Name" value="<%= ticket.name %>" name="name" required>
           </div>
           <div class="form-group">
             <label for="phone_number">Phone No:</label>
-            <input type="number" class="form-control" id="phone_number" placeholder="Enter Phone No" name="phone_number" required>
+            <input type="number" class="form-control" id="phone_number" placeholder="Enter Phone No" value="<%= ticket.phone_number %>" name="phone_number" required>
           </div>
           <div class="form-group">
             <label for="cellphone">Phone Type:</label>
-            <input type="text" class="form-control" id="cellphone" placeholder="Enter Phone Type" name="cellphone" required>
+            <input type="text" class="form-control" id="cellphone" placeholder="Enter Phone Type" value="<%= ticket.cellphone %>" name="cellphone" required>
           </div>
           <div class="form-group">
             <label for="problem">Problem:</label>
-            <input type="text" class="form-control" id="problem" placeholder="Enter Problem with Phone" name="problem" required>
+            <input type="text" class="form-control" id="problem" placeholder="Enter Problem with Phone" value="<%= ticket.problem %>" name="problem" required>
           </div>
           <button type="submit" class="btn btn-primary">Submit</button>
         </form>
+        <% }); %>
       </div>
     </div>
     
